--- a/css/flag_style.css
+++ b/css/flag_style.css
@@ -463,3 +463,34 @@ h1 {
 #custom-message {
     margin-bottom: 0.7vw;
 }
+
+/* === BRANDING LINE === */
+.branding-line {
+    font-size: 1vw !important;
+    font-style: italic !important;
+    font-weight: 300 !important;
+    color: rgba(255, 255, 255, 0.8) !important;
+    margin-top: 1vw;
+    padding-top: 0.5vw;
+    text-align: left;
+    line-height: 1.3;
+}
+
+.branding-icon {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 1em;
+    margin-left: 0.4em;
+    transition: color 0.2s, transform 0.2s;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.branding-icon:hover {
+    color: rgba(255, 255, 255, 1);
+    transform: scale(1.2);
+}
+
+.branding-icon i {
+    vertical-align: middle;
+}
